Messy but it works

--- a/package.json
+++ b/package.json
@@ -15,5 +15,18 @@
   "bugs": {
     "url": "https://github.com/nrstirzaker/NotMyVision/issues"
   },
-  "homepage": "https://github.com/nrstirzaker/NotMyVision#readme"
+  "homepage": "https://github.com/nrstirzaker/NotMyVision#readme",
+  "dependencies": {
+    "@google-cloud/storage": "^1.1.0",
+    "aws-sdk": "^2.46.0",
+    "firebase": "^3.8.0",
+    "mongodb": "^2.2.26",
+    "mongoose": "^4.9.7",
+    "twit": "^2.2.5",
+    "twitter": "^1.7.0",
+    "twitter-node-client": "0.0.6"
+  },
+  "devDependencies": {
+    "random-js": "^1.0.8"
+  }
 }
