--- a/package.json
+++ b/package.json
@@ -17,14 +17,9 @@
   },
   "homepage": "https://github.com/nrstirzaker/NotMyVision#readme",
   "dependencies": {
-    "@google-cloud/storage": "^1.1.0",
-    "aws-sdk": "^2.46.0",
-    "firebase": "^3.8.0",
     "mongodb": "^2.2.26",
     "mongoose": "^4.9.7",
-    "twit": "^2.2.5",
-    "twitter": "^1.7.0",
-    "twitter-node-client": "0.0.6"
+    "twitter": "^1.7.0"
   },
   "devDependencies": {
     "random-js": "^1.0.8"
