--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "mongodb": "^2.2.26",
     "mongoose": "^4.9.7",
+    "mongoose-auto-increment": "^5.0.1",
     "twitter": "^1.7.0"
   },
   "devDependencies": {
